--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div id="divWrapper">
 	<div id="divHeader"><img src="my-website.png" width="405" height="68" /></div>
 	<div id="divLine"></div>
-	<div id="divLinks">
+	<div class="divLinks">
 		<div id="divNav">
 		  <ul>
 			<li><a href="index.html" class="current">About</a><li>
@@ -20,7 +20,7 @@
 		  </ul>	
 		</div>
 	</div>
-	<div id="divLine"></div>
+	<div class="divLine"></div>
 	<div id="divAbout">
 		<div id="divContent"><img src="about-icon.png" width="90" height="123"/>
 		<h5>Jacob B.</h5>
