--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 <div id="divWrapper">
 	<div id="divHeader"><img src="my-website.png" width="405" height="68" /></div>
-	<div id="divLine"></div>
-	<div class="divLinks">
+	<div class="divLine"></div>
+	<div id="divLinks">
 		<div id="divNav">
 		  <ul>
 			<li><a href="index.html" class="current">About</a><li>
