--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 <div id="divWrapper">
-	<div id="divHeader"><img src="my-website.png" width="405" height="68" /></div>
+	<div id="divHeader"><img src="my-website.png"  alt="Relevant textual alternative to the image" width="405" height="68" /></div>
 	<div class="divLine"></div>
 	<div id="divLinks">
 		<div id="divNav">
