--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+<link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
 <title> New document</title>
 
 </head>
 
 <body>
 <div id="divWrapper">
-	<div id="divHeader"><img src="my-website.png"  alt="Relevant textual alternative to the image" width="405" height="68" /></div>
+	<div id="divHeader"><img src="img/my-website.png"  alt="Relevant textual alternative to the image" width="405" height="68" /></div>
 	<div class="divLine"></div>
 	<div id="divLinks">
 		<div id="divNav">
@@ -22,7 +22,7 @@
 	</div>
 	<div class="divLine"></div>
 	<div id="divAbout">
-		<div id="divContent"><img src="about-icon.png"  alt="Relevant textual alternative to the image" width="90" height="123"/>
+		<div id="divContent"><img src="img/about-icon.png"  alt="Relevant textual alternative to the image" width="90" height="123"/>
 		<h5>Jacob B.</h5>
 		<p>LLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 		</div>
