--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <div id="divWrapper">
-	<div id="divHeader"><img src="img/my-website.png"  alt="Relevant textual alternative to the image" width="405" height="68" /></div>
-		<div class="divLine"></div>
+	<Header><img src="img/my-website.png"  alt="Relevant textual alternative to the image" width="405" height="68" /></Header>
+		<div class="Line"></div>
 			<div id="divLinks">
 				<div id="divNav">
 		  			<ul>
@@ -18,7 +18,7 @@
 		  			</ul>	
 				</div>
 			</div>
-<div class="divLine"></div>
+<div class="Line"></div>
 	<div id="divAbout">
 		<div id="divContent"><img src="img/about-icon.png"  alt="Relevant textual alternative to the image" width="90" height="123"/>
 			<h5>Jacob B.</h5>
