--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
 </head>
 <body>
 <div id="Wrapper">
-	<Header>
-		<img src="img/my-website.png"  alt="Relevant textual alternative to the image" width="405" height="68" />
-	</Header>
-			<div id="Links">
-				<div id="Nav">
-		  			<ul>
-						<li><a href="index.html" class="current">About</a><li>
-						<li><a href="sites/resume.html">Resume</a><li>
-						<li><a href="sites/portfolio.html">Portfolio</a><li>
-						<li><a href="sites/contact.html">Contact</a><li>
-		  			</ul>	
-				</div>
-			</div>
+<Header>
+	<img src="img/my-website.png"  alt="Relevant textual alternative to the image" width="405" height="68" />
+</Header>
+	<div id="Links">
+		div id="Nav">
+		  	<ul>
+				<li><a href="index.html" class="current">About</a><li>
+				<li><a href="sites/resume.html">Resume</a><li>
+				<li><a href="sites/portfolio.html">Portfolio</a><li>
+				<li><a href="sites/contact.html">Contact</a><li>
+		  	</ul>	
+		</div>
+	</div>
 	<div id="About">
 		<div id="Content">
 			<img src="img/about-icon.png"  alt="Relevant textual alternative to the image" width="90" height="123"/>
