--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<img src="img/my-website.png"  alt="Relevant textual alternative to the image" width="405" height="68" />
 </Header>
 	<div id="Links">
-		div id="Nav">
+		<div id="Nav">
 		  	<ul>
 				<li><a href="index.html" class="current">About</a><li>
 				<li><a href="sites/resume.html">Resume</a><li>
