--- a/sites/portfolio.html
+++ b/sites/portfolio.html
@@ -14,8 +14,8 @@
 		  <ul>
 			<li><a href="../index.html">About</a><li>
 			<li><a href="resume.html">Resume</a><li>
-			<li><a href="portfolio.html" class="current">Portfolio</a><li>
-			<li><a href="contact.html">Contact</a><li>
+			<li><a href="portfolio.html">Portfolio</a><li>
+			<li><a href="contact.html" class="current">Contact</a><li>
 		  </ul>	
 		</div>
 	</div>
