--- a/sites/resume.html
+++ b/sites/resume.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,9 +13,9 @@
 		<div id="Nav">
 		  <ul>
 			<li><a href="../index.html">About</a><li>
-			<li><a href="resume.html"class="current">Resume</a><li>
+			<li><a href="resume.html">Resume</a><li>
 			<li><a href="portfolio.html">Portfolio</a><li>
-			<li><a href="contact.html">Contact</a><li>
+			<li><a href="contact.html" class="current">Contact</a><li>
 		  </ul>	
 		</div>
 	</div>
